# cedana-samples

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.bindcraft  Dockerfile.bio  Dockerfile.build  Dockerfile.compbio  Dockerfile.cpu  README.md  build.sh  monitor_training.py  publish.sh  requirements-compbio.txt  requirements-torch2.10.txt  requirements-torch2.4.txt  requirements-torch2.5.txt  requirements-torch2.6.txt  requirements-torch2.7.txt  requirements-torch2.8.txt  requirements.txt  signal_test.py  test_nginx.yaml  test_pod.yaml  test_pod_gpu.yaml
gpu_smr/: CMakeLists.txt  build.sh  compute-throughput-saxpy  compute-throughput-saxpy.cu  cuda_error.cuh  cuda_graph_events.cu  cuda_graph_loop.cu  cuda_graph_siblings.cu  cuda_graph_warmth.cu  gpu_props  gpu_props.cu  llamafactory.sh  mem-throughput-saxpy  mem-throughput-saxpy-loop  mem-throughput-saxpy-loop.cu  mem-throughput-saxpy.cu  tensorflow_training.py  vector_add  vector_add.cu  vector_add_host  vector_add_host.cu  vector_add_multi_gpu  vector_add_multi_gpu.cu
gpu_smr/compbio/: bindcraft.sh
gpu_smr/compbio/boltz/: README.md  boltz_predict_example.sh
gpu_smr/compbio/chai-1/: chai_example.sh  predict_structure_benchmark.py  setup_chai.sh
gpu_smr/compbio/gromacs/: build_once.sh
gpu_smr/compbio/openmm/: README.md  openmm_example.sh  setup_openmm.sh 
gpu_smr/cuda-samples/: .gitignore  build.sh  compare-results.py  cuda-samples.sh  run-tests.sh  run_tests.py  samples.txt  test_args.json
gpu_smr/pytorch/: flux.py  llama70b.py  phi4-14b_inf.py  small_diffuser.py  stablelm_inf.py  transformers_inference.py  whisper-large.py
gpu_smr/pytorch/audio/: parakeetstt.py  whisper-large.py
gpu_smr/pytorch/audiogen/: parakeetstt.py
gpu_smr/pytorch/imagegen/: flux-diffusers-inference
gpu_smr/pytorch/llm/: download_hf_model.py  stablelm_inf.py  transformers_inference.py  vllm_inference.py  vllm_inference_readiness.py
gpu_smr/pytorch/multigpu/: bert-finetune.py  (+1 more)
(+155 files in other folders)
